Add option to load callback context (cb_index and cb_inputs) when loading callback variables from records.

--- a/docs/src/benchmarking.ipynb
+++ b/docs/src/benchmarking.ipynb
@@ -95,8 +95,8 @@
     "We saw above how to import and solve a problem from the CUTEst collection.\n",
     "When benchmarking multiple optimizers, we run them on several problems and\n",
     "compare their performances.\n",
-    "Performance profiles are one of the most commonly used and widely accepted\n",
-    "tools for comparing different optimization algorithms.\n",
+    "Performance profiles are one of the most frequently utilized and \n",
+    "broadly recognized methods for evaluating and comparing two or more optimization algorithms.\n",
     "\n",
     "The following code shows how to:\n",
     "1. filter a subset of problems from CUTEst based on the number of variables and constraints,\n",
@@ -199,7 +199,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "For more details on `CUTEstProblem` or any of the `benchmarking` utilities, \n",
+    "For more details on the `CUTEstProblem` class or any of the `benchmarking` utilities, \n",
     "visit the [API Reference](./api.md) page."
    ]
   }
