--- a/docs/src/optimizer_development.ipynb
+++ b/docs/src/optimizer_development.ipynb
@@ -48,7 +48,7 @@
     "While creating a new optimizer, developers may declare this option so that\n",
     "users are able to take advantage of this feature already implemented in\n",
     "the `Optimizer` base class.\n",
-    "The list of variables allowed for `readable_outputs` is the\n",
+    "The list of variables allowed for `readable_outputs` is any\n",
     "subset of the keys in the `available_outputs` attribute.\n",
     "```\n",
     "\n",
@@ -57,6 +57,8 @@
     "\n",
     "The following example shows the implementation of the BFGS algorithm for unconstrained\n",
     "optimization, employing modules for approximating Hessians and performing line searches.\n",
+    "The Hessians are approximated using a damped BFGS algorithm and \n",
+    "the line searches enforce strong Wolfe conditions.\n",
     "The code also demonstrates how to document the API for a new optimizer."
    ]
   },
@@ -316,10 +318,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Modules are available for line searches, merit functions, hesssian approximations,\n",
+    "## Modules\n",
+    "\n",
+    "Reusable modules are available for line searches, merit functions, Hessian approximations,\n",
     "and quadratic programming.\n",
     "For more details on the `Optimizer` class or any of the modules, \n",
-    "visit the [API Reference](./api.md) page."
+    "visit the [API Reference](./api.md) page.\n",
+    "\n",
+    "Advanced users should note that the repository includes additional modules \n",
+    "beyond those documented in the [API Reference](./api.md). \n",
+    "Exploring the directories corresponding to the respective module categories might be helpful."
    ]
   }
  ],
