Add developer docs.

--- a/docs/src/optimizer_development.ipynb
+++ b/docs/src/optimizer_development.ipynb
@@ -38,6 +38,9 @@
     "to override the default implementation  provided by the base class \n",
     "and customize the presentation of the results.\n",
     "\n",
+    "Developers may need to implement additional methods for setting up constraints, \n",
+    "their bounds, and derivatives, depending on their optimizer.\n",
+    "\n",
     "```{note}\n",
     "Since HDF5 files from optimizer recording are incompatible with text editors, \n",
     "developers can provide users with the `readable_outputs` \n",
@@ -51,7 +54,6 @@
     "The list of variables allowed for `readable_outputs` is any\n",
     "subset of the keys in the `available_outputs` attribute.\n",
     "```\n",
-    "\n",
     "\n",
     "## Developing the BFGS optimizer\n",
     "\n",
