Update version numbers, Add keep_viz_open parameter to all optimizer docstrings.

--- a/docs/src/optimizer_development.ipynb
+++ b/docs/src/optimizer_development.ipynb
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,8 +98,10 @@
     "        when reusing outputs from the hot-start record.\n",
     "    visualize : list, default=[]\n",
     "        The list of scalar variables to visualize during the optimization.\n",
+    "    keep_viz_open : bool, default=False\n",
+    "        If ``True``, keep the visualization window open after the optimization is complete.\n",
     "    turn_off_outputs : bool, default=False\n",
-    "        If ``True``, prevents modOpt from generating any output files.\n",
+    "        If ``True``, prevent modOpt from generating any output files.\n",
     "\n",
     "    maxiter : int, default=500\n",
     "        Maximum number of iterations.\n",
