Update optimization and postprocessing pages. Ready for release modOpt 0.1.0

--- a/docs/src/optimization.ipynb
+++ b/docs/src/optimization.ipynb
@@ -25,7 +25,7 @@
     "\n",
     "Unlike the educational algorithms, users have an easy, alternate way \n",
     "to optimize using the performant algorithms.\n",
-    "This approach uses a minimal API allows users to solve the optimization problem using \n",
+    "This approach uses a minimal API that allows users to solve optimization problems using \n",
     "a single line of code once the problem is defined.\n",
     "To demonstrate this, we solve the simple optimization problem:\n",
     "\n",
@@ -154,7 +154,7 @@
     "The standard and recommended way to optimize a problem is by directly using the\n",
     "optimizer class objects.\n",
     "This approach involves importing the optimizer of your choice from the library,\n",
-    "setting tolerances and other parameters for the chosen optimizer and finally solving the problem.\n",
+    "setting tolerances and other parameters for the chosen optimizer, and finally solving the problem.\n",
     "Although slightly more verbose, using the optimizer classes can be more beneficial.\n",
     "It provides access to additional optimizer information and offers more debugging options,\n",
     "such as verifying the correctness of the user-provided first derivatives with the `check_first_derivatives` method.\n",
@@ -250,7 +250,7 @@
    "metadata": {},
    "source": [
     "## Live visualization of optimization\n",
-    "Users have the option to visualize scalar variables during optimization.\n",
+    "Users have the option to visualize scalar variables during an optimization.\n",
     "There are two categories of variables that can be visualized.\n",
     "The first category includes the user-provided problem functions, derivatives, and their inputs,\n",
     "which are called the **callback_variables** because these functions are\n",
@@ -295,11 +295,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "To visualize scalar variables of interest, simply pass them as a list using the keyword argument `visualize`.\n",
-    "The callback variable name labels will always be the variable name prefixed with `callback_`. \n",
+    "To visualize scalar variables of interest, simply pass them as a list using the keyword argument `visualize` when instantiating an optimizer.\n",
+    "The callback variable names will always be prefixed with `callback_` in the visualization. \n",
     "If a variable name is available in both **callback_variables** and **optimizer_variables**, both will be plotted.\n",
     "The code below demonstrates how to visualize the optimization variable $x_1$, the objective, and optimality \n",
-    "when using the `TrustConstr` optimizer."
+    "when using the `TrustConstr` optimizer.\n",
+    "Note that the `keep_viz_open` parameter must be set to `True` to keep\n",
+    "the plot open once the optimization is complete."
    ]
   },
   {
@@ -387,19 +389,21 @@
    "source": [
     "Notice that for $x_1$ and the objective, we see two plots each--one reported from the callbacks \n",
     "and the other reported from the optimizer iterations.\n",
-    "The results printed at the end show that the `total_callbacks` as 52 and `obj_callbacks` as 13\n",
+    "The results printed at the end show the `total_callbacks` as 52 and `obj_callbacks` as 13\n",
     "which match the number of points on the corresponding plots.\n",
     "Similarly, we see 18 points plotted on the `x[0]`, `obj`, and `opt` plots, corresponding\n",
     "to the total number of optimization iterations reported in the results.\n",
     "\n",
     "## Recording\n",
     "When optimizing a problem, users may want to record the entire optimization history\n",
-    "for several reasons--such as post-processing, hot-restarting an optimization that \n",
+    "for several reasons, such as post-processing, hot-restarting an optimization that \n",
     "terminated prematurely, or for further analysis.\n",
+    "Refer to [Post-processing](./postprocessing.md) for details on how to access and work with optimization records.\n",
+    "\n",
     "Users can set `recording=True` to save the full history of the callbacks \n",
-    "and optimizer iterations (**callback_variables** and **optimizer_variables** discussed above).\n",
-    "See [Post-processing](./postprocessing.md) for details on accessing and working with optimization records.\n",
-    "The example above can be recorded as shown below."
+    "and optimizer iterations (see **callback_variables** and **optimizer_variables** discussed above).\n",
+    "The following code shows how to record an optimization using the same\n",
+    "example solved above."
    ]
   },
   {
@@ -461,6 +465,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Directory structure\n",
+    "\n",
     "When instantiating an optimizer for the first time for a problem, modOpt creates a directory for that problem, \n",
     "named using the `problem_name` with the suffix `_outputs`.\n",
     "Each time a new optimizer object is instantiated for the same problem, \n",
@@ -468,7 +474,7 @@
     "All outputs generated by modOpt for an optimization will be placed in this directory.\n",
     "\n",
     "The optimization recording is saved as an HDF5 file named `record.hdf5`.\n",
-    "The relative path to the directory is stored in the `out_dir` attribute of the optimizer, and all files \n",
+    "The relative path to the outputs directory is stored in the `out_dir` attribute of the optimizer, and all files \n",
     "available in the directory are stored in the `modopt_output_files` attribute.\n",
     "The code below prints these attributes for the optimization performed above."
    ]
@@ -572,6 +578,33 @@
     "# Print the directory and its contents to see the generated readable output files\n",
     "print('Output Directory:', optimizer.out_dir)\n",
     "print('Output Files:', optimizer.modopt_output_files)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "From the output files listed in the console output above, we see that \n",
+    "five additional plain text files \n",
+    "(*'obj.out'*, *'con.out'*, *'x.out'*, *'opt.out'*, *'feas.out'*)\n",
+    "were generated by modOpt based on the `readable_outputs` argument \n",
+    "provided to the optimizer.\n",
+    "\n",
+    "## Disabling modOpt-generated outputs\n",
+    "By default, modOpt generates the `modopt_results.out` file along with other files,\n",
+    "depending on the optimizer.\n",
+    "To disable the generation of all output files, set `turn_off_outputs=True`\n",
+    "when instantiating an optimizer, as shown below."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "optimizer = mo.TrustConstr(problem=problem, \n",
+    "                           turn_off_outputs=True)"
    ]
   },
   {
