--- a/docs/src/postprocessing.ipynb
+++ b/docs/src/postprocessing.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Post-processing\n",
     "In this section, we discuss how to access and work with data from optimization records.\n",
-    "This includes loading various data, visualizing results, and hot-restarting an optimization \n",
+    "This includes loading various data, visualizing results, and hot-starting an optimization \n",
     "using optimization records.\n",
     "\n",
     "## Recording an optimization\n",
@@ -117,7 +117,7 @@
     "To view the data available in a record, call the `print_record_contents()` utility with the record file name,\n",
     "as shown below.\n",
     "There are four types of information available in a record: `attributes`, `opt_vars`, `callback_vars`, and `results`.\n",
-    "The `print_record_contents()` function also returns a tuple containing four lists, one for each type of information.\n",
+    "The `print_record_contents()` function always returns a tuple containing four lists, one for each type of information.\n",
     "To suppress printing, set the keyword argument `suppress_print=True`."
    ]
   },
@@ -194,14 +194,14 @@
     "This function requires two arguments: 1) the record file name, and 2) the list of variable names to load. \n",
     "The function returns a dictionary with *keys* as variable names and *values* as lists of variable iterates \n",
     "corresponding to those variable names.\n",
-    "Note that the keys for **callback_variables** will be prefixed with `'callback_'`\n",
+    "Note that the keys for **callback_variables** will be prefixed with `'callback_'`.\n",
     "If only specific scalar variables need to be loaded from an array variable, use the format `'var_name[idx]'`.\n",
     "For example,\n",
     "- `'x[0]'` will load the iterates for the first element of the array 'x', and\n",
     "- `'jac[i,j]'` will load the iterates for the (i,j)-th element of the array 'jac'.\n",
     "\n",
     "The `load_variables()` function also provides an optional keyword argument, `callback_context`,\n",
-    "to load callback_variables together with its corresponding inputs. \n",
+    "to load **callback_variables** together with its corresponding inputs. \n",
     "To learn more about `callback_context`, visit the [API Reference](./api/postprocessing.md).\n",
     "\n",
     "The following code loads the iterates of x[0], the objective, the Jacobian, optimality, and feasibility\n",
@@ -302,7 +302,7 @@
     "which is `None` by default.\n",
     "\n",
     "The following code plots the iterations of x[0], the objective, the Jacobian, optimality, and feasibility\n",
-    "from the record."
+    "from the record and saves them to a file named *'post_opt_viz.pdf'*."
    ]
   },
   {
@@ -343,14 +343,14 @@
     "When the problem functions and/or their derivatives are costly to evaluate,\n",
     "even a few reruns can significantly increase the overall optimization time, \n",
     "making it highly inefficient.\n",
-    "The hot-starting feature in modOpt leverages the record file to efficiently \n",
-    "reuse previously computed function and derivative values, thereby\n",
+    "The hot-starting feature in modOpt utilizes the record file from a prior optimization \n",
+    "to efficiently reuse previously computed function and derivative values, thereby\n",
     "avoiding unnecessary computational costs.\n",
     "\n",
     "One key benefit of hot-starting, as opposed to simply restarting from the previous solution, is\n",
     "that quasi-Newton methods maintain the same Hessian approximations from the prior run during\n",
     "a hot-start.\n",
-    "In contrast, restarting initializes the Hessian as an identity matrix, \n",
+    "In contrast, normal restarting initializes the approximate Hessian as an identity matrix, \n",
     "potentially increasing the number of additional iterations required for convergence, \n",
     "even if we start from the previous solution.\n",
     "Furthermore, restarting resets the Lagrange multipliers, which may also necessitate additional iterations, \n",
@@ -445,7 +445,7 @@
     "From the console output above, we see that out of the 56 callbacks made by the optimizer, \n",
     "52 were reused from the previous record and were never recomputed using the user-provided functions.\n",
     "Only one new evaluation of the objective, gradient, constraint, and Jacobian was performed \n",
-    "to achieve a more optimal solution required by the tighter tolerances.\n",
+    "to achieve a more optimal solution necessitated by the tighter tolerance.\n",
     "\n",
     "For more details on any of the post-processing utilities, \n",
     "visit the [API Reference](./api/postprocessing.md) page."
